grammar.txt

grammar : statement *
        ;

statement : IDENTIFIER ":" expression ";"
          ;

expression : component ("|" component) *
           ;

component : element *
          ;

element : term "*"
        | term "+"
        | term "?"
        | term
        ;

term : IDENTIFIER
     | STRING
     | "(" expression ")"
     ;
